# CPP

./: .gitignore  README.md
Networking/client_server_pair/TCP/: client.cpp  server.cpp
Networking/client_server_pair/UDP/: client.cpp  server.cpp
Networking/udp-epoll-lab/: CMAKELists.txt  CMakeLists.txt  README.md
Networking/udp-epoll-lab/apps/: udp_client.cpp  udp_echo_server.cpp
benchmark/concurrency/: concurrency_deep_dive.md  false_sharing.cpp  spsc_ring_buffer.cpp
benchmark/cpu_optimization/branch_prediction/: branch_benchmark.cpp
benchmark/cpu_optimization/docs/: cpu_optimization.md
benchmark/cpu_optimization/profiling/: bs_profile.cpp  out.folded  out.perf  perf_report.txt
benchmark/memory/: cache_and_memory.md  container_iter_bench.cpp
benchmark/network_latency/: udp_burst_client.cpp  udp_echo_server.cpp
concurrency/: cmd  multithreadedCounter.cpp
concurrency/False_Sharing_Demo/: cmd  falseSharingDemo.cpp
concurrency/Single_Producer_Single_Consumer_Ring_Buffer/: README.md  cmd
concurrency/Single_Producer_Single_Consumer_Ring_Buffer/lab/: bench_main.cpp  bench_spsc.cpp  ring_buffer.cpp  (+2 more)
examples/RVO/: rvo.cpp
examples/move/: move.cpp
examples/shared_ptr/: sharedPtrExample.cpp
examples/type_deduction/: readability.cpp  referenceDeduction.cpp  returnTypeCapture.cpp
examples/unique_ptr/: uniquePtrExample.cpp
examples/vector_like/: vectorLikeExample.cpp
synchronization_primitives/minimal_spinlock/: cmd  main.cpp  minimal_spinlock.h  spinlock.h
system_programming/: cmd
virtual_memory_and_paging/: cmd  mini_cpp_pager.cpp
(+5 files in other folders)
